--- a/src/components/WhatElseWeOffer.astro
+++ b/src/components/WhatElseWeOffer.astro
@@ -75,6 +75,7 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
         margin-bottom: 1rem;
         text-align: center;
         align-items: center;
+        background: transparent;
     }
     
     .icon {
