--- a/src/components/reusable/BookAnAppotiment.astro
+++ b/src/components/reusable/BookAnAppotiment.astro
@@ -18,6 +18,7 @@ import personAvatar from '/public/avatars/person.png';
         padding: 1rem 0;
         text-align: center;
         margin: 2rem 0;
+        width: 100%;
     }
     .book-an-appointment-header{
         display: flex;
