--- a/src/components/Credentials.astro
+++ b/src/components/Credentials.astro
@@ -30,7 +30,7 @@ const images = [
         <BookAnAppotiment />
     </div>
 </section>
-<style>
+<style is:inline>
     .credentials{
         display: flex;
         flex-direction: column;
@@ -44,23 +44,32 @@ const images = [
         flex-direction: row;
         gap: 1rem;
         margin-bottom: 2rem;
+        width: 60%;
     }
     .credentials-item{
         width: 100%;
-        min-height: 10rem;
         display: flex;
         justify-content: center;
         align-items: center;
     }
 
+    .credentials-item img{
+        width: 80%;
+        height: 80%;
+        object-fit: contain;
+    }
+
     .video-container{
-        width: 40%;
+        width: 30%;
+        min-height: 300px;
     }
     @media (max-width: 480px) {
         .credentials-item img{
-            width: 60%;
-            height: 60%;
-            object-fit: contain;
+            width: 100%;
+            height: 100%;
+        }
+        .credentials-container{
+            width: 80%;
         }
         .video-container{
             width: 80%;
