--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,10 @@ const { title } = Astro.props;
 		<link rel="preload" href="/hero_bg.webp" as="image" />
 		<link rel="preload" href="/logo/clinic27.webp" as="image" />
 		<link rel="preload" href="/logo/google.webp" as="image" />
+		<link rel="preload" href="/logo/ahm.png" as="image" />
+		<link rel="preload" href="/logo/asr-logo.png" as="image" />
+		<link rel="preload" href="/logo/asr-logo.png" as="image" />
+		<link rel="preload" href="/logo/medibank.png.webp" as="image" />
 	</head>
 	<body>
 		<slot />
@@ -67,7 +71,6 @@ const { title } = Astro.props;
 					padding: 1rem 1rem;
 				}
 			}
-
 		</style>
 	</body>
 </html>
