Performance improved 100% to 62

--- a/src/components/Credentials.astro
+++ b/src/components/Credentials.astro
@@ -2,9 +2,9 @@
 import UnderlineHeader from './reusable/UnderlineHeader.astro';
 import YoutubeVideo from './reusable/YoutubeVideo.astro';
 import BookAnAppotiment from './reusable/BookAnAppotiment.astro';
-import ahmLogo from '/public/logo/ahm.png';
-import medibankLogo from '/public/logo/medibank.png.webp';
-import asrLogo from '/public/logo/asr-logo.png';
+import ahmLogo from '../assets/logo/ahm.png';
+import medibankLogo from '../assets/logo/medibank.png.webp';
+import asrLogo from '../assets/logo/asr-logo.png';
 import { Image } from 'astro:assets';
 
 const images = [
