--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import clinicLogo from '/public/logo/clinic27.webp';
+import clinicLogo from '../assets/logo/clinic27.webp';
 import PrimaryButton from './reusable/PrimaryButton.astro';
 ---
 <footer>
@@ -20,7 +20,7 @@ import PrimaryButton from './reusable/PrimaryButton.astro';
 </footer>
 <style>
     .footer-container{
-        background-image: url('/hero_bg.webp');
+        background-image: url('../assets/hero_bg.webp');
         background-size: cover;
         background-position: center;
         display: flex;
