--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets';
 import PrimaryButton from './reusable/PrimaryButton.astro';
-import  clinicLogo from '/public/logo/clinic27.webp';
+import  clinicLogo from '../assets/logo/clinic27.webp';
 
 ---
 <header class="header">
