--- a/src/components/reusable/Ratings.astro
+++ b/src/components/reusable/Ratings.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import googleLogo from '/public/logo/google.webp';
+import googleLogo from '../../assets/logo/google.webp';
 
 interface Props {
     blackText?: boolean;
